# space_sim

./: .gitignore  CMakeLists.txt  README.md  migrations
api_server/: CMakeLists.txt
api_server/src/: main.cpp
core/: CMakeLists.txt
core/include/: auth.h  db.h  session.h
core/include/commands/: cmd_misc.h  cmd_universe.h  commands.h
core/include/time/: duration.h  game_time.h
core/include/universe/: gate_network.h  solar_system.h  universe.h
core/src/: auth.cpp  db.cpp  session.cpp
core/src/commands/: cmd_misc.cpp  cmd_universe.cpp  commands.cpp
core/src/time/: duration.cpp  game_time.cpp
core/src/universe/: gate_network.cpp  universe.cpp
docs/: design.md  stargate_network.md  station_philosophy.md  time_and_simulation.md  todo_docs.txt  trade_and_logistics.md  universe_factions.md
sim_server/: CMakeLists.txt  CMakePresets.json
sim_server/include/: cmd_time.h  cmd_time_utils.h  dev_universe.h  game_clock.h  internal_cmd_api.h  universe_generator.h
sim_server/migrations/: 001_auth.sql  002_sessions.sql
sim_server/src/: cmd_time.cpp  cmd_time_utils.cpp  dev_universe.cpp  internal_cmd_api.cpp  main.cpp  universe_generator.cpp
tools/db_tool/: CMakeLists.txt
tools/db_tool/src/: main.cpp
